--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="text_tv_title_artist_popularity">Popularity:</string>
     <string name="description_album_image">image album</string>
     <string name="value_dummy_tv_album_name">ALBUM 100</string>
+    <string name="tv_country_name_dummy">AC</string>
 </resources>
