--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="value_dummy_tv_album_name">ALBUM 100</string>
     <string name="tv_country_name_dummy">AC</string>
     <string name="msg_empty_filter">No results found, please mayor again</string>
+    <string name="item_menu_search">search</string>
 </resources>
