--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="tv_country_name_dummy">AC</string>
     <string name="msg_empty_filter">No results found, please mayor again</string>
     <string name="item_menu_search">search</string>
+    <string name="item_menu_logout">logout</string>
+    <string name="title_btn_go_to_spotify">Ir a Spotify</string>
 </resources>
